--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+html{
+    font-size: 12px;
+}
+body, p {
+    font-size: 14px;
+    font-weight: 400;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+html, body{
+    height: 100%;
+}
+body{
+    overflow-x: hidden;
+}
+/* Заголовик */
+.h1, h1 {
+    font-size: 2.5rem;
+    font-weight: 500;
+} 
+.h2, h2 {
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+    width: 80%;
+    margin: 0px auto;
+    margin-bottom: 20px;
+}
+.h3, h3 {
+    font-size: 1.75rem;
+    font-weight: 500;
+}
+.h4, h4 {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+.h5, h5 {
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+.h6, h6 {
+    font-size: 1.25rem;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+/* Заголовик */
+
+/* Списки */
+ul, ol {
+    list-style-type: none;
+    padding-left: 0;
+}
+li {
+    margin-bottom: 0.5rem;
+}
+/* Списки */
+
+/* Кнопки */
+button, input[type="submit"] {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+}
+/* Кнопки */
+button{
+    background: rgb(236, 236, 236);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Ссылки */
+a {
+    color: #404040;
+    text-decoration: none;
+    background-color: transparent;
+} 
+/* Стили для наведения на ссылку */
+a:hover {
+    color: #0056b3;
+    text-decoration: underline;
+}
+/* Стили для активных ссылок */
+a:active {
+    color: green;
+}
+/* Стили для посещенных ссылок */
+a:visited {
+    color: #0056b3;
 }
